2011-06-27  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49365
	* params.def (min-insn-to-prefetch-ratio): Reduce from 10 to 9.

2011-06-27  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49169
	* fold-const.c (get_pointer_modulus_and_residue): Don't rely on
	the alignment of function decls.

2011-06-26  Iain Sandoe  <iains@gcc.gnu.org>

	PR target/47997
	* config/darwin.c (darwin_mergeable_string_section): Place string
	constants in '.cstring' rather than '.const' when CF/NSStrings are
	active.

2011-06-26  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.c (save_local_or_in_reg_p): Adjust comment.
	(emit_save_register_window): Likewise.
	(sparc_expand_prologue): Use SIZE_INT_RTX and SIZE_RTX variables.
	(sparc_flat_expand_prologue): Add comment.  Always emit blockage.
	Swap back %o7/%i7 in register naming.

2011-06-25  Iain Sandoe  <iains@gcc.gnu.org>

	PR driver/49371
	* config/darwin.c (darwin_override_options): Improve warning when
	mdynamic-no-pic is given together with fPIC/fpic, also warn when it
	is given with fpie/fPIE.
	* config/darwin.h (PIE_SPEC): New, (LINK_SPEC): Use PIE_SPEC.
	* config/darwin9.h (PIE_SPEC): New.

2011-06-25  Basile Starynkevitch  <basile@starynkevitch.net>

	* timevar.c (timevar_print): Increase width for display of timevar
	name.

2011-06-24  Jakub Jelinek  <jakub@redhat.com>

	PR c++/46400
	* c-decl.c (union lang_tree_node): Use TYPE_NEXT_VARIANT
	instead of TYPE_CHAIN for chain_next for types.

2011-06-24  Richard Henderson  <rth@redhat.com>

	* config/sparc/sparc.md (create_flat_frame_1<P:mode>): Remove.
	(create_flat_frame_2<P:mode>, create_flat_frame_3<P:mode>): Remove.
	* config/sparc/sparc.c (gen_create_flat_frame_1): Remove.
	(gen_create_flat_frame_2, gen_create_flat_frame_3): Remove.
	(sparc_flat_expand_prologue): Emit individual instructions
	instead of one of the above.

2011-06-24  Easwaran Raman  <eraman@google.com>

	PR rtl-optimization/49429
	PR target/49454